# chatbox

./: .gitignore  CMakeLists.txt  Makefile  clientapp  connection.h  main.c
client/: client.c  client.h  message.c  message.h  user.c  user.h
proto/: Makefile  harness.c  main.c  message.c  message.h  message.pb-c.c  message.pb-c.h  message.proto  protobuf_test  protobuf_test.c
server/: server.c  server.h
test/: message_tests.c
util/: connection.c  connection.h  console.c  console.h
